--- a/index.html
+++ b/index.html
@@ -100,41 +100,35 @@
 	</div>
 
 	<div class="section hero nerf-_v2 wf-section">
-		<div class="container-2 header_v2 w-container">
-			<h1 class="title_v2">SLT-Net</h1>
-			<h1 class="subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
-			<h1 class="CVPR_label">CVPR 2022</h1>
-			<div class="authors_list_single w-row">
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://xueliancheng.github.io/" target="_blank" class="authors_v2">Xuelian Cheng<span
-							class="text-span_star">*</span><span class="superscript text-span">1*</span></a>
-				</div>
-				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank"
-						class="authors_v2">Huan
-						Xiong<span class="text-span">*</span><span class="superscript text-span">2*</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://dengpingfan.github.io/" target="_blank" class="nerf_authors_v2">Deng-Ping Fan<span
-							class="text-span_nerf_star"></span><span class="superscript text-span_nerf">3</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank"
+		<div class="container-2 nerf_header_v2 w-container">
+			<h1 class="nerf_title_v2">SLT-Net</h1>
+			<h1 class="nerf_subheader_v2">Implicit Motion Handling for Video Camouflaged Object Detection</h1>
+			<h1 class="eccv_label">CVPR 2022</h1>
+			<div class="nerf_authors_list_single w-row">
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://xueliancheng.github.io/" target="_blank"
+						class="nerf_authors_v2">Xuelian Cheng<span class="text-span_nerf_star">*</span><span
+							class="superscript text-span_nerf">1*</span></a></div>
+				<div class="column w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
+						href="https://scholar.google.com/citations?user=l4hm14MAAAAJ&hl=en" target="_blank" class="nerf_authors_v2">Huan Xiong<span class="text-span_nerf_star">*</span><span
+							class="superscript text-span_nerf">2*</span></a></div>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://dengpingfan.github.io/" target="_blank"
+						class="nerf_authors_v2">Deng-Ping Fan<span class="text-span_nerf_star">3</span><span
+							class="superscript text-span_nerf"></span></a></div>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://scholar.google.com.sg/citations?user=E9NVOBUAAAAJ&hl=en" target="_blank"
 						class="nerf_authors_v2">Yiran Zhong<span class="text-span_nerf">4</span><span
-							class="superscript"></span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="https://sites.google.com/site/mehrtashharandi/" target="_blank"
-						class="nerf_authors_v2">Mehrtash Harandi<span class="text-span_nerf">1</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
-					<a href="http://twd20g.blogspot.com/" target="_blank" class="nerf_authors_v2">Tom Drummond<span
-							class="text-span_nerf">1</span></a>
-				</div>
-				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
+							class="superscript"></span></a></div>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a href="https://sites.google.com/site/mehrtashharandi/"
+						target="_blank" class="nerf_authors_v2">Mehrtash Harandi<span
+							class="text-span_nerf">1</span></a></div>
+				<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
+						href="http://twd20g.blogspot.com/" target="_blank"
+						class="nerf_authors_v2">Tom Drummond<span class="text-span_nerf">1</span></a></div>
+			</div>
+
+				<!-- <div class="w-col w-col-2 w-col-small-4 w-col-tiny-6">
 					<a href="https://zongyuange.github.io/" target="_blank" class="nerf_authors_v2">Zongyuan Ge<span
 							class="text-span_nerf">1</span></a>
-				</div>
+				</div> -->
 			</div>
 			<div class="columns-7 w-row">
 				<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
