--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</div>
 
 		</div>
-		<div class="columns-6 w-row">
+		<!-- <div class="columns-6 w-row">
 			<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
 				<div class="nerf_mobile_inst"><span class="text-span_nerf">1 </span>Monash University</div>
 			</div>
@@ -137,9 +137,9 @@
 			<div class="nerf_mobile_col_inst w-col w-col-4 w-col-small-4 w-col-tiny-4">
 				<div class="nerf_mobile_inst"><span class="text-span_nerf">4 </span> SenseTime </div>
 			</div>
-		</div>
+		</div> -->
 
-		<!-- <div class="nerf_authors_list_single nerf_authors_affiliation w-row">
+		<div class="nerf_authors_list_single nerf_authors_affiliation w-row">
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2"> Monash University </h1>
 			</div>
@@ -152,7 +152,7 @@
 			<div class="w-col w-col-2">
 				<h1 class="nerf_affiliation_v2"> SenseTime </h1>
 			</div>
-		</div> -->
+		</div>
 
 		<div class="nerf_authors_list_single w-row">
 			<div class="w-col w-col-2 w-col-small-4 w-col-tiny-6"><a
@@ -244,6 +244,272 @@
 				<div class="text-block-2"><strong class="bold-text-nerf_v2">Data[Baidu Drive]</strong></div>
 			</div>
 		</div>
+		
+		<div data-delay="10000" data-animation="slide" class="nerf_slider_v2 w-slider" data-autoplay="true"
+		data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0"
+		data-nav-spacing="3" data-duration="800" data-infinite="true">
+		<div class="mask w-slider-mask">
+			<div class="slide w-slide">
+				<div class="div-block-9 first_video">
+					<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/colorspout_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/colorspout_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/colorspout_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/colorspout_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/orchid.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/orchid.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/orchid.jpg">
+							<source src="https://storage.googleapis.com/nerf_data/website_renders/orchid.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/benchflower_100k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/benchflower_100k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/benchflower_100k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/benchflower_100k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/lumpyroots_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/lumpyroots_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/lumpyroots_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/lumpyroots_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/fern_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/fern_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/fern_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/fern_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/fullmagnolia_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/fullmagnolia_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/fullmagnolia_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/fullmagnolia_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/trike_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/trike_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/trike_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/trike_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/pecanpie_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/pecanpie_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/pecanpie_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/pecanpie_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/trex.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/trex.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/trex.jpg">
+							<source src="https://storage.googleapis.com/nerf_data/website_renders/trex.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/redtoyota.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/redtoyota.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/redtoyota.jpg">
+							<source src="https://storage.googleapis.com/nerf_data/website_renders/redtoyota.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/piano_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/piano_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/piano_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/piano_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+			<div class="w-slide">
+				<div class="div-block-9">
+					<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/colorspout_200k_rgb.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/colorspout_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/colorspout_200k_rgb.jpg">
+							<source
+								src="https://storage.googleapis.com/nerf_data/website_renders/colorspout_200k_rgb.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+				<div class="div-block-9 last_block">
+					<div class="video_class w-embed"><video width=100% height=100% autoplay muted controls loop
+							preload="metadata"
+							poster="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/images/orchid.jpg">
+							<source
+								src="http://cseweb.ucsd.edu/~viscomp/projects/LF/papers/ECCV20/nerf/website_renders/orchid.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+					<div class="video_class mobile w-embed"><video width=100% height=100% muted controls loop
+							preload="metadata"
+							poster="https://storage.googleapis.com/nerf_data/website_renders/images/orchid.jpg">
+							<source src="https://storage.googleapis.com/nerf_data/website_renders/orchid.mp4"
+								type="video/mp4">
+							Your browser does not support the video tag.
+						</video></div>
+				</div>
+			</div>
+		</div>
+		<div class="w-slider-arrow-left">
+			<div class="w-icon-slider-left"></div>
+		</div>
+		<div class="w-slider-arrow-right">
+			<div class="w-icon-slider-right"></div>
+		</div>
+		<div class="nerf_slide_nav w-slider-nav w-slider-nav-invert w-round"></div>
+	</div>
 	</div>
 
 
