--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
 						<source src="demo/black_cat_1.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div class="video_class w-embed" height=720px><video width=100% height=100% muted controls loop
+				<div class="video_class w-embed" height=720px><video width=100% height=720px muted controls loop
 						preload="metadata" poster="demo/flower_crab_spider_2.png">
 						<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 						Your browser does not support the video tag.
 					</video></div>
-				<div class="video_class mobile w-embed" height=720px><video width=100% height=100% muted controls loop
+				<div class="video_class mobile w-embed" height=720px><video width=100% height=720px muted controls loop
 						preload="metadata" poster="demo/flower_crab_spider_2.png">
 						<source src="demo/flower_crab_spider_2.mp4" type="video/mp4">
 						Your browser does not support the video tag.
